--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
       "prettier --write",
       "git add"
     ],
-    "**/*.{js,jsx,ts,tsx}": [
+    "/src/**/*.{js,jsx,ts,tsx}": [
       "eslint --fix"
     ]
   },
