package.json添加项目中文描述

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mdms-web",
   "title": "mdms-web",
+  "description": "主数据管理",
   "version": "1.0.0",
   "private": true,
   "scripts": {
