--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
     "preinstall": "node ./bin/preinstall.js",
-    "start": "cross-env MOCK=none umi dev",
+    "start": "cross-env MOCK=none ESLINT=none umi dev",
     "start:mock": "cross-env MOCK=yes umi dev",
     "initpage": "sei-tools initPage",
     "update:pt": "sei-tools pt",
