--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "precommit": "lint-staged --allow-empty"
   },
   "dependencies": {
+    "@antv/g6": "^4.1.12",
     "@umijs/plugin-qiankun": "^1.3.4",
     "antd": "^3.19.5",
     "classnames": "^2.2.6",
