--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,7 +9,7 @@ LABEL maintainer="hua.feng@changhong.com"
 # 环境变量
 ## TZ：时区设置
 ## APP_NAME：应用名称（各项目需要修改）
-ENV TZ='Asia/Shanghai' APP_NAME="mdms-web"
+ENV TZ='Asia/Shanghai' APP_NAME="dms-web"
 #修改应用设置
 COPY nginx.conf /etc/nginx/nginx.conf
 
